Update wiht fixes from bundles.

--- a/src/mod_rating_by_type/templates/main.html
+++ b/src/mod_rating_by_type/templates/main.html
@@ -125,7 +125,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player, score in top_24 %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -151,59 +151,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player in top_streak %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
-                            <div class="cell">{{ forloop.counter }}</div>
-                            <div class="cell">{{ player.nickname }}</div>
-                            <div class="cell img">
-                                {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
-                            </div>
-                            <div class="cell">{{ player.score_streak_current }}</div>
-                        </a>
-                        {% endfor %}
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if toptank_24 %}
-                <div class="top_pilots" style="float: left;">
-                    <div class="top_title">
-                        {% trans 'Best tankmen in the last 24 hours' context 'tour_top' %}
-                    </div>
-                    <div class="top_table">
-                        <div class="head_row">
-                            <div class="cell" style="width: 30px;">#</div>
-                            <div class="cell">{% trans 'tankman nickname' context 'tour_top' %}</div>
-                            <div class="cell" style="width: 30px;"></div>
-                            <div class="cell">{% trans 'score' context 'tour_top' %}</div>
-                        </div>
-                        {% for player, score in toptank_24 %}
-                        <a class="row" href="{{ player.get_tankman_url }}">
-                            <div class="cell">{{ forloop.counter }}</div>
-                            <div class="cell">{{ player.nickname }}</div>
-                            <div class="cell img">
-                                {% include 'inline/table_coal_pref_icon.html' with coal_pref=player.coal_pref %}
-                            </div>
-                            <div class="cell">{{ score }}</div>
-                        </a>
-                        {% endfor %}
-                    </div>
-                </div>
-                {% endif %}
-
-                {% if toptank_streak %}
-                <div class="top_pilots" style="float: right;">
-                    <div class="top_title">
-                        {% trans 'Best live tankmen' context 'tour_top' %}
-                    </div>
-                    <div class="top_table">
-                        <div class="head_row">
-                            <div class="cell" style="width: 30px;">#</div>
-                            <div class="cell">{% trans 'tankman nickname' context 'tour_top' %}</div>
-                            <div class="cell" style="width: 30px;"></div>
-                            <div class="cell">{% trans 'score' context 'tour_top' %}</div>
-                        </div>
-                        {% for player in toptank_streak %}
-                        <a class="row" href="{{ player.get_tankman_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -231,7 +179,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player, score in top_24_light %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -257,7 +205,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player in top_streak_light %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -285,7 +233,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player, score in top_24_medium %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -311,7 +259,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player in top_streak_medium %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -339,7 +287,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player, score in top_24_heavy %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -365,7 +313,7 @@
                             <div class="cell">{% trans 'score' context 'tour_top' %}</div>
                         </div>
                         {% for player in top_streak_heavy %}
-                        <a class="row" href="{{ player.get_pilot_url }}">
+                        <a class="row" href="{{ player.get_profile_url }}">
                             <div class="cell">{{ forloop.counter }}</div>
                             <div class="cell">{{ player.nickname }}</div>
                             <div class="cell img">
@@ -384,14 +332,6 @@
                     <a href="{% url 'stats:pilots' %}?tour={{ request.tour.id }}">
                         <span>
                             {% trans 'Overall Pilot Rankings' %}
-                        </span>
-                    </a>
-                </div>
-
-                <div class="full_rating">
-                    <a href="{% url 'stats:tankmans' %}?tour={{ request.tour.id }}">
-                        <span>
-                            {% trans 'Overall Tankman Rankings' %}
                         </span>
                     </a>
                 </div>
@@ -439,69 +379,34 @@
                 </div>
                 {% endif %}
 
-                 {% if total_active_pilots %}
+                {% if total_active_players %}
                 <div class="active_players">
                     <div class="title">
-                        {% trans 'Active pilots' %}
+                        {% trans 'Active players' %}
                     </div>
                     <div class="total">
                         {% trans 'total' context 'tour_active' %}
                     </div>
                     <div class="total_num">
-                        {{ total_active_pilots }}
+                        {{ total_active_players }}
                     </div>
 
                     <div class="bar_mini" style="float: right;">
                         <div class="bar">
                             <div class="bar_grid" style="width: 50%;"></div>
-                            {% widthratio coal_active_pilots.1 total_active_pilots 100 as width %}
+                            {% widthratio coal_active_players.1 total_active_players 100 as width %}
                             <div class="bar_red" style="width: {{ width }}%;"></div>
-                            {% widthratio coal_active_pilots.2 total_active_pilots 100 as width %}
+                            {% widthratio coal_active_players.2 total_active_players 100 as width %}
                             <div class="bar_blue" style="width: {{ width }}%;"></div>
                         </div>
                         <div class="bar_red_num">
-                            {{ coal_active_pilots.1 }}
+                            {{ coal_active_players.1 }}
                         </div>
                         <div class="bar_gray_num">
-                            {{ coal_active_pilots.0 }}
+                            {{ coal_active_players.0 }}
                         </div>
                         <div class="bar_blue_num">
-                            {{ coal_active_pilots.2 }}
-                        </div>
-                    </div>
-
-                    <div class="clearfix"></div>
-                </div>
-                {% endif %}
-
-                {% if total_active_tankmans %}
-                <div class="active_players">
-                    <div class="title">
-                        {% trans 'Active tankmen' %}
-                    </div>
-                    <div class="total">
-                        {% trans 'total' context 'tour_active' %}
-                    </div>
-                    <div class="total_num">
-                        {{ total_active_tankmans }}
-                    </div>
-
-                    <div class="bar_mini" style="float: right;">
-                        <div class="bar">
-                            <div class="bar_grid" style="width: 50%;"></div>
-                            {% widthratio coal_active_tankmans.1 total_active_tankmans 100 as width %}
-                            <div class="bar_red" style="width: {{ width }}%;"></div>
-                            {% widthratio coal_active_tankmans.2 total_active_tankmans 100 as width %}
-                            <div class="bar_blue" style="width: {{ width }}%;"></div>
-                        </div>
-                        <div class="bar_red_num">
-                            {{ coal_active_tankmans.1 }}
-                        </div>
-                        <div class="bar_gray_num">
-                            {{ coal_active_tankmans.0 }}
-                        </div>
-                        <div class="bar_blue_num">
-                            {{ coal_active_tankmans.2 }}
+                            {{ coal_active_players.2 }}
                         </div>
                     </div>
 
@@ -516,7 +421,7 @@
                         {% trans 'Online' %}
                     </div>
                     <div class="total">
-                        {% trans 'players' context 'online' %}
+                        {% trans 'pilots' context 'online' %}
                     </div>
                     <div class="total_num">
                         {{ total_online }}
@@ -538,7 +443,7 @@
                         </div>
                     </div>
                     <a class="online_button" href="{% url 'stats:online' %}">
-                        {% trans 'List of players online' %}
+                        {% trans 'List of pilots online' %}
                     </a>
 
                     <div class="clearfix"></div>
@@ -573,18 +478,7 @@
                     <div class="title">{% trans 'Top Pilots' %}</div>
                     <div class="top_pilots_columns">
                         {% for player in previous_tour_top %}
-                            <a class="pilot" href="{{ player.get_pilot_url }}">
-                                <div class="num">{{ forloop.counter }}</div>
-                                <div class="nickname">{{ player.nickname }}</div>
-                            </a>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="top_pilots">
-                    <div class="title">{% trans 'Top Tankmen' %}</div>
-                    <div class="top_pilots_columns">
-                        {% for player in previous_tour_toptank %}
-                            <a class="pilot" href="{{ player.get_tankman_url }}">
+                            <a class="pilot" href="{{ player.get_profile_url }}">
                                 <div class="num">{{ forloop.counter }}</div>
                                 <div class="nickname">{{ player.nickname }}</div>
                             </a>
@@ -596,7 +490,7 @@
                     <div class="title">{% trans 'Top Fighter Pilots' %}</div>
                     <div class="top_pilots_columns">
                         {% for player in previous_tour_top_light %}
-                            <a class="pilot" href="{{ player.get_pilot_url }}">
+                            <a class="pilot" href="{{ player.get_profile_url }}">
                                 <div class="num">{{ forloop.counter }}</div>
                                 <div class="nickname">{{ player.nickname }}</div>
                             </a>
@@ -609,7 +503,7 @@
                     <div class="title">{% trans 'Top Attacker Pilots' %}</div>
                     <div class="top_pilots_columns">
                         {% for player in previous_tour_top_medium %}
-                            <a class="pilot" href="{{ player.get_pilot_url }}">
+                            <a class="pilot" href="{{ player.get_profile_url }}">
                                 <div class="num">{{ forloop.counter }}</div>
                                 <div class="nickname">{{ player.nickname }}</div>
                             </a>
@@ -622,7 +516,7 @@
                     <div class="title">{% trans 'Top Bomber Pilots' %}</div>
                     <div class="top_pilots_columns">
                         {% for player in previous_tour_top_heavy %}
-                            <a class="pilot" href="{{ player.get_pilot_url }}">
+                            <a class="pilot" href="{{ player.get_profile_url }}">
                                 <div class="num">{{ forloop.counter }}</div>
                                 <div class="nickname">{{ player.nickname }}</div>
                             </a>
