--- a/src/mod_stats_by_aircraft/templates/pilot_aircraft.html
+++ b/src/mod_stats_by_aircraft/templates/pilot_aircraft.html
@@ -506,8 +506,8 @@
                 <div class="clearfix"></div>
 
 
-        {% if ammo_breakdown.given|length > 0 %}
-         <div class="player_detailed" style="float: left; width: 380px">
+          {% if ammo_breakdown.given|length > 0 %}
+         <div class="player_detailed" style="float: left;">
             <div class="title">
                 {% trans 'Offensive ammo breakdown' %}
             </div>
@@ -516,18 +516,22 @@
             </div>
 
              {% for ammo_name, avg_used in ammo_breakdown.given %}
-             <div class="sub_item">
+            {% if ammo_name|length <= 40 %}
+            <div class="item">
+            {% else %}
+            <div class="item" style="height: 80px;">
+            {% endif %}
                 <div class="name">{{ammo_name}}</div>
                 <div class="num">{{avg_used}}</div>
              </div>
-             {% endfor %}
+            {% endfor %}
 
 
          </div>
         {% endif  %}
 
         {% if ammo_breakdown.received|length > 0 %}
-        <div class="player_detailed" style="float: right; width: 750px;">
+        <div class="player_detailed" style="float: right;">
             <div class="title">
                 {% trans 'Defensive ammo breakdown' %}
             </div>
@@ -535,10 +539,10 @@
                 <div class="name">{% trans 'Average hits per aircraft lost' %} ⛤</div>
             </div>
             {% for ammo_name, avg_used in ammo_breakdown.received %}
-            {% if ammo_name|length <= 60 %}
-            <div class="sub_item">
+            {% if ammo_name|length <= 40 %}
+            <div class="item">
             {% else %}
-            <div class="sub_item" style="height: 80px;">
+            <div class="item" style="height: 80px;">
             {% endif %}
                 <div class="name">{{ammo_name}}</div>
                 <div class="num">{{avg_used}}</div>
@@ -546,6 +550,7 @@
             {% endfor %}
          </div>
         {% endif %}
+
 
         <div class="clearfix"></div>
 
