--- a/src/mod_rating_by_type/templates/squad.html
+++ b/src/mod_rating_by_type/templates/squad.html
@@ -47,9 +47,9 @@
             <div class="profile_main_stats">
                 <div class="item">
                     <img src="{% static 'img/icons/big/human.png' %}" width="" height="" title="" alt="">
-                    <div class="text">{% trans 'Number of players' %}</div>
+                    <div class="text">{% trans 'Number of pilots' %}</div>
                     {% if squad.num_members < SQUAD_MEMBERS_MINIMUM %}
-                        <div class="num" style="color: #C72B11;" title="{% trans 'Not enough players to participate in the rating' %}">
+                        <div class="num" style="color: #C72B11;" title="{% trans 'Not enough pilots to participate in the rating' %}">
                             {{ squad.num_members }}
                         </div>
                     {% else %}
@@ -63,12 +63,12 @@
                 </div>
                 <div class="item">
                     <img src="{% static 'img/icons/big/gk.png' %}" width="" height="" title="" alt="">
-                    <div class="text">{% trans 'Destroyed ground targets' %}</div>
+                    <div class="text">{% trans 'Destroyed on Ground' %}</div>
                     <div class="num">{{ squad.gk_total }}</div>
                 </div>
                 <div class="item">
                     <img src="{% static 'img/icons/big/ft.png' %}" width="" height="" title="" alt="">
-                    <div class="text">{% trans 'Sortie Time' %}</div>
+                    <div class="text">{% trans 'Flight Time' %}</div>
                     <div class="num">{{ squad.flight_time|seconds_to_time }}</div>
                 </div>
                 {% if split_rankings %}
@@ -415,7 +415,7 @@
                     <div class="num">{{ squad.sorties_total }}</div>
                 </div>
                 <div class="item">
-                    <div class="name">{% trans 'Lost aircraft/tanks' context 'total' %}</div>
+                    <div class="name">{% trans 'Lost aircraft' context 'total' %}</div>
                     <div class="num">{{ squad.lost_aircraft }}</div>
                 </div>
                 <div class="item">
@@ -525,39 +525,6 @@
                             </div>
                         </div>
                     {% endif %}
-                    {% if squad.sorties_cls.tank_light %}
-                        <div class="item">
-                            <div class="name">{% trans 'Light Tanks' context 'specialty' %}</div>
-                            <div class="desc">{% trans 'number of sorties' %}: {{ squad.sorties_cls.tank_light }}</div>
-                            {% widthratio squad.sorties_cls.tank_light squad.sorties_total 100 as width %}
-                            <div class="pct">{{ width|floatformat:'0' }}%</div>
-                            <div class="bar">
-                                <div class="progress yellow" style="width: {{ width }}%;"></div>
-                            </div>
-                        </div>
-                    {% endif %}
-                    {% if squad.sorties_cls.tank_medium %}
-                        <div class="item">
-                            <div class="name">{% trans 'Medium Tanks' context 'specialty' %}</div>
-                            <div class="desc">{% trans 'number of sorties' %}: {{ squad.sorties_cls.tank_medium }}</div>
-                            {% widthratio squad.sorties_cls.tank_medium squad.sorties_total 100 as width %}
-                            <div class="pct">{{ width|floatformat:'0' }}%</div>
-                            <div class="bar">
-                                <div class="progress yellow" style="width: {{ width }}%;"></div>
-                            </div>
-                        </div>
-                    {% endif %}
-                    {% if squad.sorties_cls.tank_heavy %}
-                        <div class="item">
-                            <div class="name">{% trans 'Heavy Tanks' context 'specialty' %}</div>
-                            <div class="desc">{% trans 'number of sorties' %}: {{ squad.sorties_cls.tank_heavy }}</div>
-                            {% widthratio squad.sorties_cls.tank_heavy squad.sorties_total 100 as width %}
-                            <div class="pct">{{ width|floatformat:'0' }}%</div>
-                            <div class="bar">
-                                <div class="progress yellow" style="width: {{ width }}%;"></div>
-                            </div>
-                        </div>
-                    {% endif %}
                 </div>
             </div>
 
@@ -586,7 +553,7 @@
                     </div>
                     <div class="item">
                         <div class="text">
-                            {% trans 'K/L - Kills per Aircraft Lost/Tank Lost' %}
+                            {% trans 'K/L - Kills per Aircraft Lost' %}
                         </div>
                         <div class="num">
                             {{ squad.kl }}
@@ -620,7 +587,7 @@
                     </div>
                     <div class="item">
                         <div class="text">
-                            {% trans 'GK/L - G.Kills per Aircraft/Tank Lost' %}
+                            {% trans 'GK/L - G.Kills per Aircraft Lost' %}
                         </div>
                         <div class="num">
                             {{ squad.gkl }}
